language/move-lang/tests/move_check/typing/borrow_local_temp_resource.move
module M {
    struct S {}
    resource struct R {}

    t0() {
        &R{};
        &mut R{};
    }
}
